fix: updated code to support .env

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "hatchling.build"
 name = "crag"
 version = "0.1.0"
 authors = [
-  { name = "Your Name" },
+  { name = "CRAG" },
 ]
 description = "Contextual Retrieval-Augmented Generation (CRAG) - A document analysis tool"
 readme = "README.md"
@@ -15,19 +15,34 @@ dependencies = [
     "streamlit>=1.28.0",
     "pyrebase4>=4.7.1",
     "python-dotenv>=1.0.0",
+    "groq",
+    "gradio",
+    "sentence_transformers",
+    "pdfplumber",
+    "faiss-cpu",
+    "pandas",
+    "setuptools>=65.0.0",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest>=7.0",
-    "black>=23.0",
-    "flake8>=6.0",
+    "pytest",
+    "black",
+    "flake8",
 ]
 
 [tool.black]
 line-length = 88
 target-version = ['py38']
 include = '\.pyi?$'
+
+[tool.hatch.build.targets.wheel]
+include = [
+    "main.py",
+    "rag_backend.py",
+    "pages/*.py",
+    "pages/*.html",
+]
 
 [tool.pytest.ini_options]
 pythonpath = [
